baml_language/crates/baml_tests/snapshots/compiles/catch_arm_return/baml_tests__compiles__catch_arm_return__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== PPIR ===
function user.may_throw(x: int) -> int  [expr] {
  { if (x Eq 0) { throw "boom" } } x
}
function user.via_catch(x: int) -> int  [expr] {
  {  } may_throw(x) catch (e) { _ => return Neg 1 }
}
function user.via_match(x: int) -> int  [expr] {
  {  } match (x) { 0 => return Neg 1, _ => x }
}
