baml_language/crates/baml_tests/snapshots/compiles/catch_arm_return/baml_tests__compiles__catch_arm_return__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.may_throw(x: int) -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: int // x // param
    let _2: bool

    bb0: {
        _2 = copy _1 == const 0_i64;
        branch copy _2 -> [bb3, bb1];
    }

    bb1: {
        _0 = copy _1;
        goto -> bb2;
    }

    bb2: {
        return;
    }

    bb3: {
        throw const "boom";
    }
}

fn user.via_catch(x: int) -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: int // x // param
    let _2: unknown // e

    bb0: {
        _0 = call const fn user.may_throw(copy _1) -> [bb3, unwind: bb1];
    }

    bb1: {
        throw_if_panic copy _2 -> bb2;
    }

    bb2: {
        _0 = const -1_i64;
        goto -> bb3;
    }

    bb3: {
        return;
    }
}

fn user.via_match(x: int) -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: int // x // param

    bb0: {
        switch copy _1 [0: bb2, otherwise: bb1];
    }

    bb1: {
        _0 = copy _1;
        goto -> bb3;
    }

    bb2: {
        _0 = const -1_i64;
        goto -> bb3;
    }

    bb3: {
        return;
    }
}
