baml_language/crates/baml_tests/snapshots/compiles/catch_arm_return/baml_tests__compiles__catch_arm_return__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.may_throw(x: int) -> int throws string {
  { : int
    if (x == 0 : bool) : void
      { : never
        throw "boom" : "boom"
      }
    x : int
  }
}
function user.via_catch(x: int) -> int throws never {
  { : int
    catch (may_throw(x) : int) : int
      catch (e)
        _ =>
          return Neg 1 : never
  }
}
function user.via_match(x: int) -> int throws never {
  { : int
    match (x : int) : int
      0 =>
        return Neg 1 : never
      _ =>
        x : int
  }
}
