baml_language/crates/baml_tests/snapshots/compiles/catch_arm_return/baml_tests__compiles__catch_arm_return__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function boundary.LocalId.capture(self: boundary.LocalId, inputs: bool | null, output: bool | null, error: bool | null) -> boundary.LocalId {
}

function boundary.id() -> boundary.LocalId {
}

function boundary.id.current() -> string {
}

function reflect.call_any(f: baml.AnyFunction<Returns = R, Throws = E>, args: unknown[], kwargs: map<string, unknown>) -> R {
}

function reflect.signature(f: baml.AnyFunction<Returns = unknown, Throws = unknown>) -> reflect.Signature {
}

function user.may_throw(x: int) -> int {
    load_var x
    load_const 0
    cmp_int_op ==
    pop_jump_if_false L0
    jump L1

  L0:
    load_var x
    return

  L1:
    load_const "boom"
    throw
}

function user.via_catch(x: int) -> int {
    load_var x
    call user.may_throw
    jump L0
    load_var e
    throw_if_panic
    load_const -1

  L0:
    return
}

function user.via_match(x: int) -> int {
    load_var x
    load_const 0
    cmp_int_op ==
    pop_jump_if_false L0
    jump L1

  L0:
    load_var x
    jump L2

  L1:
    load_const -1

  L2:
    return
}
